--- a/main.html
+++ b/main.html
@@ -7,10 +7,63 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<h1>Signup Form Car</h1>
+	<form action ="/Submit" method="post">
+		<div>
+			<label for ="name">Name*</label>
+			<input required type="text" name="name" placeholder="Name">
+		</div>
+<br>
+		<div>
+			<label for ="Email">Email*</label>
+			<input required type="email" name="Email" placeholder="Email">
+		</div>
+<br>
+		<div>
+			<label for ="Gender">Gender*</label>
+			<input required type="radio" name="Gender">
+			<label for="Male">Male</label>
+			<input required type="radio" name="Gender">
+			<label for="Female">Female</label>
+		</div>
+<br>
+		<div>
+			<label for ="Car Brands">Car Brands*</label>
+		
+			<input required type="checkbox" name="Car Brands">
+			<label for ="BMW">BMW</label>
+			<input required type="checkbox" name="Car Brands">
+			<label for ="Audi">Audi</label>
+			<input required type="checkbox" name="Car Brands">
+			<label for ="Mercedez">Mercedez</label>
+		</div>
+<br>
+		<div>
+			<label for ="Age">Age*</label>
+			<input required type="number" name="Age" placeholder ="Age">
+		</div>
+<br>
+		<div>
+			<label for ="DOB">DOB*</label>
+			<input required type="date" name="DOB">
+		</div>
+<br>
+		<div>
+			<label for ="Phone Number">Phone Number</label>
+			<input type="tel" name="Phone Number">
+		</div>
+<br>
+		<div>
+			<label for ="Password">Password*</label>
+			<input type="password" name="Password" placeholder="Password">
+		</div>
+<br>
+		<div>
+			<label for ="TOS"> I agree to the TOS*</label>
+			<input required type="checkbox" name="TOS">
+		</div>		
+		<br>
+<button>Submit</button>
 </body>
 
 </html>
