--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Signup Form Car</h1>
-	<form action ="/Submit" method="post">
+	<form action ="/Submit" method="get">
 		<div>
 			<label for ="name">Name*</label>
 			<input required type="text" name="name" placeholder="Name">
@@ -28,14 +28,14 @@
 		</div>
 <br>
 		<div>
-			<label for ="Car Brands">Car Brands*</label>
+			<label for ="Car Brands"">Car Brands*</label>
+			<input type="Car Brands" placeholder="--Please choose an option--"
+			
+			<input type="checkbox"name="Car Brands" id="">
+			<labelfor ="Car Brands">BMW</label>
+			
+				
 		
-			<input required type="checkbox" name="Car Brands">
-			<label for ="BMW">BMW</label>
-			<input required type="checkbox" name="Car Brands">
-			<label for ="Audi">Audi</label>
-			<input required type="checkbox" name="Car Brands">
-			<label for ="Mercedez">Mercedez</label>
 		</div>
 <br>
 		<div>
