--- a/main.html
+++ b/main.html
@@ -22,16 +22,14 @@
 		<div>
 			<label for ="Gender">Gender*</label>
 			<input required type="radio" name="Gender"id="#gender_m">
-			<label for="Male">Male</label>
+			<label for="male">Male</label>
 			<input required type="radio" name="Gender"id="gender_f">
-			<label for="Female">Female</label>
+			<label for="female">Female</label>
 		</div>
 <br>
 		<div>
 
 			<label for ="Car Brands"">Car Brands*</label>
-			
-
 			<select>
           <!-- option tag starts -->
             <option>--Please choose an option--</option>
