--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 			<label for ="Gender">Gender*</label>
 			<input required type="radio" name="Gender"id="#gender_m">
 			<label for="male">Male</label>
-			<input required type="radio" name="Gender"id="gender_f">
+			<input required type="radio" name="Gender"id="#gender_f">
 			<label for="female">Female</label>
 		</div>
 <br>
