--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Signup Form Car</h1>
+	<h2>Signup Form Car</h2>
 	<form action ="/submit" method="get">
 		<div>
 			<label for ="name">Name*</label>
@@ -42,7 +42,7 @@
 <br>
 		<div>
 			<label for ="Age">Age*</label>
-			<input required type="number" name="Age" placeholder ="Age" id=" #age">
+			<input required type="" name="Age" placeholder ="Age" id=" #age">
 		</div>
 <br>
 		<div>
