--- a/main.html
+++ b/main.html
@@ -1,71 +1,45 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<h2>Signup Form Car</h2>
-	<form action ="/submit" method="get">
-		<div>
-			<label for ="name">Name*</label>
-			<input required type="text" name="name" placeholder="Name"id="#name">
-		</div>
-<br>
-		<div>
-			<label for ="Email">Email*</label>
-			<input required type="email" name="Email" placeholder="Email"id="#email">
-		</div>
-<br>
-		<div>
-			<label for ="Gender">Gender*</label>
-			<input required type="radio" name="Gender"id="#gender_m">
-			<label for="male">Male</label>
-			<input required type="radio" name="Gender"id="#gender_f">
-			<label for="female">Female</label>
-		</div>
-<br>
-		<div>
 
-			<label for ="Car Brands"">Car Brands*</label>
-			<select>
-          <!-- option tag starts -->
-            <option>--Please choose an option--</option>
-            <option value="BMW">BMW</option>
-            <option value="Audi">Audi</option>
-            <option value="Mercedez">Mercedez</option>
-        <!-- option tag ends -->
-        </select>
-		</div>
-<br>
-		<div>
-			<label for ="Age">Age*</label>
-			<input required type="" name="Age" placeholder ="Age" id="#age">
-		</div>
-<br>
-		<div>
-			<label for ="DOB">DOB*</label>
-			<input required type="date" name="DOB"id="#dob">
-		</div>
-<br>
-		<div>
-			<label for ="Phone Number">Phone Number</label>
-			<input type="tel" name="Phone Number" placeholder="xxx-xxx-xxxx"id="#tel">
-		</div>
-<br>
-		<div>
-			<label for ="Password">Password*</label>
-			<input type="password" name="Password" placeholder="Password"id="#password">
-		</div>
-<br>
-		<div>
-			<label for ="TOS"> I agree to the TOS*</label>
-			<input required type="checkbox" name="TOS"id="#tos">
-		</div>		
-		<br>
-<button>submit</button>
+<form action="#" method="post">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required placeholder="Name"><br>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required placeholder="Email"><br>
+
+  <label>Gender:</label>
+  <label for="gender_m"><input type="radio" id="gender_m" name="gender" required> Male</label>
+  <label for="gender_f"><input type="radio" id="gender_f" name="gender" required> Female</label><br>
+
+  <label for="cars">Car Brands:</label>
+  <select id="cars" name="cars" required>
+    <option value="" disabled selected>--Please choose an option--</option>
+    <option value="Toyota">Toyota</option>
+    <option value="Honda">Honda</option>
+    <option value="Ford">Ford</option>
+    <option value="Chevrolet">Chevrolet</option>
+  </select><br>
+
+  <label for="age">Age:</label>
+  <input type="number" id="age" name="age" required placeholder="Age"><br>
+
+  <label for="dob">DOB:</label>
+  <input type="date" id="dob" name="dob" required><br>
+
+  <label for="tel">Phone Number:</label>
+  <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br>
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" required placeholder="Password"><br>
+
+  <label for="tos"><input type="checkbox" id="tos" name="tos" required> I agree to the TOS</label><br>
+
+  <button type="submit">Sign Up</button>
+</form>
+
 </body>
-
 </html>
